# legion

./: .envrc  .gitignore  CLAUDE.md  DATASETS.md  PHASE1_PROGRESS.md  PROJECT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
communication/: __init__.py  async_collectives.py  collectives.py  grpc_client.py  grpc_collectives.py  grpc_server.py  ring_collectives.py  serialization.py
communication/proto/: tensor.proto  tensor_pb2.py  tensor_pb2_grpc.py  worker.proto  worker_pb2.py  worker_pb2_grpc.py
coordinator/: __init__.py  clustering.py  database.py  registry.py  server.py  training_config.py  version_manager.py
core/: compression.py  dataset.py  model.py  partitioner.py
scripts/: start_services.py  test_checkpoint_workflow.py  test_two_workers.py
sim/: __init__.py  collectives.py  model.py  train.py  worker.py
tests/: __init__.py  test_async_collectives.py  test_checkpoint_assembly.py  test_compression.py  test_coordinator.py  test_coordinator_version_endpoints.py  test_distributed_dataset.py  test_grpc_communication.py  test_huggingface_dataset.py  test_model.py  test_partitioner.py  test_ring_collectives.py  test_version_manager.py  test_worker.py  test_worker_config_device.py
tests/integration/: __init__.py  test_api.py  test_multi_worker.py  test_work_stealing.py
worker/: __init__.py  assembler.py  assembler_service.py  client.py  config.py  coordinator_client.py  heartbeat.py  shard_manager.py  telemetry.py  trainer.py
